@@ -65,6 +65,102 @@ namespace
 {
 	using namespace libtorrent;
 
+	size_type collect_free_download(
+		torrent::peer_iterator start
+		, torrent::peer_iterator end)
+	{
+		size_type accumulator = 0;
+		for (torrent::peer_iterator i = start; i != end; ++i)
+		{
+			// if the peer is interested in us, it means it may
+			// want to trade it's surplus uploads for downloads itself
+			// (and we should not consider it free). If the share diff is
+			// negative, there's no free download to get from this peer.
+			size_type diff = i->second->share_diff();
+			assert(diff < std::numeric_limits<size_type>::max());
+			if (i->second->is_peer_interested() || diff <= 0)
+				continue;
+
+			assert(diff > 0);
+			i->second->add_free_upload(-diff);
+			accumulator += diff;
+			assert(accumulator > 0);
+		}
+		assert(accumulator >= 0);
+		return accumulator;
+	}
+
+
+	// returns the amount of free upload left after
+	// it has been distributed to the peers
+	size_type distribute_free_upload(
+		torrent::peer_iterator start
+		, torrent::peer_iterator end
+		, size_type free_upload)
+	{
+		if (free_upload <= 0) return free_upload;
+		int num_peers = 0;
+		size_type total_diff = 0;
+		for (torrent::peer_iterator i = start; i != end; ++i)
+		{
+			size_type d = i->second->share_diff();
+			assert(d < std::numeric_limits<size_type>::max());
+			total_diff += d;
+			if (!i->second->is_peer_interested() || i->second->share_diff() >= 0) continue;
+			++num_peers;
+		}
+
+		if (num_peers == 0) return free_upload;
+		size_type upload_share;
+		if (total_diff >= 0)
+		{
+			upload_share = std::min(free_upload, total_diff) / num_peers;
+		}
+		else
+		{
+			upload_share = (free_upload + total_diff) / num_peers;
+		}
+		if (upload_share < 0) return free_upload;
+
+		for (torrent::peer_iterator i = start; i != end; ++i)
+		{
+			peer_connection* p = i->second;
+			if (!p->is_peer_interested() || p->share_diff() >= 0) continue;
+			p->add_free_upload(upload_share);
+			free_upload -= upload_share;
+		}
+		return free_upload;
+	}
+
+	struct match_peer_ip
+	{
+		match_peer_ip(tcp::endpoint const& ip)
+			: m_ip(ip)
+		{}
+
+		bool operator()(policy::peer const& p) const
+		{ return p.ip.address() == m_ip.address(); }
+
+		tcp::endpoint m_ip;
+	};
+
+	struct match_peer_connection
+	{
+		match_peer_connection(peer_connection const& c)
+			: m_conn(c)
+		{}
+
+		bool operator()(policy::peer const& p) const
+		{ return p.connection == &m_conn; }
+
+		const peer_connection& m_conn;
+	};
+
+
+}
+
+namespace libtorrent
+{
 	// the case where ignore_peer is motivated is if two peers
 	// have only one piece that we don't have, and it's the
 	// same piece for both peers. Then they might get into an
@@ -72,9 +168,10 @@ namespace
 	void request_a_block(
 		torrent& t
 		, peer_connection& c
-		, std::vector<peer_connection*> ignore = std::vector<peer_connection*>())
+		, std::vector<peer_connection*> ignore)
 	{
 		assert(!t.is_seed());
+		assert(!c.has_peer_choked());
 		int num_requests = c.desired_queue_size()
 			- (int)c.download_queue().size()
 			- (int)c.request_queue().size();
@@ -245,15 +342,20 @@ namespace
 			}
 
 			piece_block block = *common_block;
-			peer->cancel_request(block);
-			c.add_request(block);
 
 			// the one we interrupted may need to request a new piece.
 			// make sure it doesn't take over a block from the peer
 			// that just took over its block (that would cause an
 			// infinite recursion)
+			peer->cancel_request(block);
+			c.add_request(block);
 			ignore.push_back(&c);
-			request_a_block(t, *peer, ignore);
+			if (!peer->has_peer_choked() && !t.is_seed())
+			{
+				request_a_block(t, *peer, ignore);
+				peer->send_block_requests();
+			}
+
 			num_requests--;
 
 			const int queue_size = (int)c.download_queue().size()
@@ -269,107 +371,8 @@ namespace
 		c.send_block_requests();
 	}
 
-
-	size_type collect_free_download(
-		torrent::peer_iterator start
-		, torrent::peer_iterator end)
-	{
-		size_type accumulator = 0;
-		for (torrent::peer_iterator i = start; i != end; ++i)
-		{
-			// if the peer is interested in us, it means it may
-			// want to trade it's surplus uploads for downloads itself
-			// (and we should not consider it free). If the share diff is
-			// negative, there's no free download to get from this peer.
-			size_type diff = i->second->share_diff();
-			assert(diff < std::numeric_limits<size_type>::max());
-			if (i->second->is_peer_interested() || diff <= 0)
-				continue;
-
-			assert(diff > 0);
-			i->second->add_free_upload(-diff);
-			accumulator += diff;
-			assert(accumulator > 0);
-		}
-		assert(accumulator >= 0);
-		return accumulator;
-	}
-
-
-	// returns the amount of free upload left after
-	// it has been distributed to the peers
-	size_type distribute_free_upload(
-		torrent::peer_iterator start
-		, torrent::peer_iterator end
-		, size_type free_upload)
-	{
-		if (free_upload <= 0) return free_upload;
-		int num_peers = 0;
-		size_type total_diff = 0;
-		for (torrent::peer_iterator i = start; i != end; ++i)
-		{
-			size_type d = i->second->share_diff();
-			assert(d < std::numeric_limits<size_type>::max());
-			total_diff += d;
-			if (!i->second->is_peer_interested() || i->second->share_diff() >= 0) continue;
-			++num_peers;
-		}
-
-		if (num_peers == 0) return free_upload;
-		size_type upload_share;
-		if (total_diff >= 0)
-		{
-			upload_share = std::min(free_upload, total_diff) / num_peers;
-		}
-		else
-		{
-			upload_share = (free_upload + total_diff) / num_peers;
-		}
-		if (upload_share < 0) return free_upload;
-
-		for (torrent::peer_iterator i = start; i != end; ++i)
-		{
-			peer_connection* p = i->second;
-			if (!p->is_peer_interested() || p->share_diff() >= 0) continue;
-			p->add_free_upload(upload_share);
-			free_upload -= upload_share;
-		}
-		return free_upload;
-	}
-
-	struct match_peer_ip
-	{
-		match_peer_ip(tcp::endpoint const& ip)
-			: m_ip(ip)
-		{}
-
-		bool operator()(policy::peer const& p) const
-		{ return p.ip.address() == m_ip.address(); }
-
-		tcp::endpoint m_ip;
-	};
-
-	struct match_peer_connection
-	{
-		match_peer_connection(peer_connection const& c)
-			: m_conn(c)
-		{}
-
-		bool operator()(policy::peer const& p) const
-		{ return p.connection == &m_conn; }
-
-		const peer_connection& m_conn;
-	};
-
-
-}
-
-namespace libtorrent
-{
 	policy::policy(torrent* t)
 		: m_torrent(t)
-//		, m_max_uploads(std::numeric_limits<int>::max())
-//		, m_max_connections(std::numeric_limits<int>::max())
 		, m_num_unchoked(0)
 		, m_available_free_upload(0)
 		, m_last_optimistic_disconnect(boost::gregorian::date(1970,boost::gregorian::Jan,1))
@@ -451,7 +454,6 @@ namespace libtorrent
 			if (c->share_diff() < -free_upload_amount
 				&& m_torrent->ratio() != 0) continue;
 			if (c->statistics().download_rate() < max_down_speed) continue;
-//			if (i->last_optimistically_unchoked > min_time) continue;
 
 			min_time = i->last_optimistically_unchoked;
 			max_down_speed = c->statistics().download_rate();
@@ -646,10 +648,6 @@ namespace libtorrent
 		if (m_torrent->is_paused()) return;
 
 		using namespace boost::posix_time;
-
-		// TODO: we must also remove peers that
-		// we failed to connect to from this list
-		// to avoid being part of a DDOS-attack
 
 		// remove old disconnected peers from the list
 		m_peers.erase(
